--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,7 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/sweetalert2/dist/sweetalert2.css",
               "src/assets/sass/material-dashboard.scss",
               "node_modules/slick-carousel/slick/slick.css"
